--- a/src/server/package.json
+++ b/src/server/package.json
@@ -14,6 +14,7 @@
   "author": "Guillaume GENCE; Max CANAL;",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "cookie-session": "^2.0.0-beta.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
