--- a/src/cyborg_modules/pfc/package.json
+++ b/src/cyborg_modules/pfc/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "connect": "^3.6.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "pug": "^2.0.0-rc.1"
   }
 }
