--- a/src/cyborg_modules/pierre_feuille_ciseaux/package.json
+++ b/src/cyborg_modules/pierre_feuille_ciseaux/package.json
@@ -13,6 +13,7 @@
     "connect": "^3.6.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "minimist": "^1.2.0",
     "pug": "^2.0.0-rc.1"
   }
 }
