Add jeu de la baffe

--- a/src/cyborg-config.json
+++ b/src/cyborg-config.json
@@ -10,6 +10,11 @@
     {
       "name": "CyborgMain - HuMain",
       "path": "./cyborgmain_humain/index.js"
+    },
+    "baffe" :
+    {
+      "name": "Le Jeu de le Baffe",
+      "path": "./baffe/index.js"
     }
   }
 
