--- a/src/cyborg-config.json
+++ b/src/cyborg-config.json
@@ -1,21 +1,1 @@
-{
-  "games":
-  {
-    "pfc":
-    {
-      "name": "Pierre Feuille Ciseaux",
-      "path": "./pierre_feuille_ciseaux/index.js"
-    },
-    "cyborgmain_humain" :
-    {
-      "name": "CyborgMain - HuMain",
-      "path": "./cyborgmain_humain/index.js"
-    },
-    "baffe" :
-    {
-      "name": "Le Jeu de le Baffe",
-      "path": "./baffe/index.js"
-    }
-  }
-
-}
+{"games":{"pfc":{"name":"Pierre Feuille Ciseaux","path":"./pierre_feuille_ciseaux/index.js"},"cyborgmain_humain":{"name":"CyborgMain - HuMain","path":"./cyborgmain_humain/index.js"},"baffe":{"name":"Le Jeu de le Baffe","path":"./baffe/index.js"},"pile_face":{"name":"PileOrFace","path":"./pile_face/index.js"}}}
